force-app/main/default/objects/Student__c/fields/Branch__c.field-meta.xml
<CustomField>
    <fullName>Branch__c</fullName>
    <label>Branch</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Data Science</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>